# swh

./: .gitignore  COPYING  NEWS  README  autoclean.sh  configure.ac
scripts/: addtrace.sh  mklogmods.sh  mkmod.sh  mod.c.tmpl  mod.h.tmpl  replret.sh  retprint  savetrace.sh
src/: FILES  Makefile.am  core.c  core.h  init.c  nami.c  nami.h  sc.c  sc.h  spawn.c  spawn.h
src/back/: Makefile.am  ansiseq.c  ansiseq.h  backends.h  fsm.c  fsm.h  fsm_cmdout.c  fsm_cmdout.h  fsm_inchar.c  fsm_inchar.h  fsm_init.c  fsm_init.h
src/back/hp/: common_hp.c  common_hp.h  fsm_cmdout_hp.c  fsm_inchar_hp.c  fsm_init_hp.c
src/common/: common.c  common.h  log.c  log.h
src/front/: Makefile.am  frontends.h  uc.c  uc.h
src/front/ia/: uc_ia.c
src/front/noop/: uc_noop.c
tracer/: tracer@src%back%ansiseq.c@ansiseq_dump  tracer@src%back%ansiseq.c@ansiseq_eatone  tracer@src%back%fsm.c@fsm_destroy  tracer@src%back%fsm.c@fsm_feed  tracer@src%back%fsm.c@fsm_new  tracer@src%back%fsm.c@isaccepting  tracer@src%back%fsm_cmdout.c@fsm_cmdout_init  tracer@src%back%fsm_init.c@fsm_init_attach  tracer@src%back%hp%common_hp.c@fsm_hp_mktok  tracer@src%back%hp%fsm_cmdout_hp.c@act_rec  tracer@src%back%hp%fsm_cmdout_hp.c@mktok  tracer@src%back%hp%fsm_cmdout_hp.c@reset  tracer@src%back%hp%fsm_init_hp.c@fsm_init_hp_attach  tracer@src%common%common.c@growbuf  tracer@src%common%common.c@hexdump  tracer@src%common%common.c@msleep  tracer@src%common%common.c@selectfd  tracer@src%common%common.c@setblocking  tracer@src%common%common.c@shiftbuf  tracer@src%common%common.c@tscribe  tracer@src%common%common.c@xmalloc  tracer@src%common%common.c@xread  tracer@src%common%common.c@xrealloc  tracer@src%common%common.c@xwrite  tracer@src%common%common.c@ywrite  tracer@src%core.c@core_init  tracer@src%core.c@core_run  tracer@src%front%ia%uc_ia.c@uc_ia_dump  tracer@src%front%ia%uc_ia.c@uc_ia_hasdata  tracer@src%front%noop%uc_noop.c@uc_noop_getdata  tracer@src%front%uc.c@uc_putdata  tracer@src%init.c@main  tracer@src%init.c@process_args  tracer@src%init.c@update_logger  tracer@src%init.c@usage  tracer@src%nami.c@nami_backends  tracer@src%sc.c@sc_write  tracer@src%spawn.c@spawn_launch
